[gd_scene load_steps=4 format=2]

[ext_resource path="res://Human/Human.gd" type="Script" id=1]
[ext_resource path="res://Hero/Hero assets/human.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 23.0144, 13.6194 )

[node name="Human" type="KinematicBody2D"]
collision_layer = 0
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1.28774, 21.7574 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 5, 5 )
texture = ExtResource( 2 )

[node name="Horizontal_arrow_position" type="Position2D" parent="."]
position = Vector2( 50.8921, 19.6701 )

[node name="Vertical_arrow_position" type="Position2D" parent="."]
position = Vector2( 0.0740814, -53.1601 )

[node name="attack_reload" type="Timer" parent="."]
one_shot = true
